[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronosat"
version = "0.1.0"
description = "NASA Earth observation history 1970-1981 toolkit for mapping and 3D visualization. Query Landsat 1-3 and Skylab EREP data for historical reconstruction."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Keith Dickey", email = "keithdickey207@example.com"}
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
gee = ["earthengine-api"]
viz = ["pyvista", "rasterio", "pystac-client", "planetary-computer"]
full = ["chronosat[gee,viz]"]

[project.scripts]
chronosat = "cli:main"

[project.urls]
Homepage = "https://github.com/keithdickey207/chronosat"
Repository = "https://github.com/keithdickey207/chronosat"
Issues = "https://github.com/keithdickey207/chronosat/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["chronosat*"]